--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,16 +1,14 @@
-{{ partial "html-header.html" . }}
-{{ partial "page-header.html" . }}
+{{ partial "head.html" . }}
 
-<main>
-	<article class="article">
-		<div class="article-header">
-			<h1 class="article-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
-			<span class="article-meta"><time itemprop="datePublished" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 Jan 2006" }}</time></span>
-		</div>
-		<div class="article-text">
-		{{.Content}}
-		</div>
-	</article>
+<main id="main">
+  <article class="article">
+    <header class="article-header">
+      <h2 class="article-header__title"></h2>
+    </header>
+    <div class="article__content">
+      {{ .Content }}
+    </div>
+  </article>
 </main>
 
 {{ partial "footer.html" . }}
