--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,25 +1,9 @@
-<footer>
+<footer id="footer">
   <div class="hr"></div>
   <nav class="footer-links">
-   {{ with .Site.Params.twitter }}<a href="{{ . }}" target="_blank">Twitter</a><span class="header-divider">&middot;</span>{{ end }}
-   {{ with .Site.Params.facebook }}<a href="{{ . }}" target="_blank">Facebook</a><span class="header-divider">&middot;</span>{{ end }}
-	 {{ with .Site.Params.github }}<a href="{{ . }}" target="_blank">GitHub</a><span class="header-divider">&middot;</span>{{ end }}
-  	<a href="/blog/index.xml" target="_self">RSS</a>
-    <span class="header-divider">&middot;</span>
-  	<a href="/license/" target="_self">License</a>
   </nav>
   <div class="copyright"> Copyright &copy; {{ .Site.Copyright | safeHTML }}</div>
 </footer>
 </div>
-{{ with .Site.GoogleAnalytics }}
-<!-- I'm so sorry -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ . }}', 'auto');
-  ga('send', 'pageview');
-</script>{{ end }}
 </body>
 </html>
