--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,10 @@
   <div class="hr"></div>
   <nav class="footer-links">
   </nav>
-  <div class="copyright"> Copyright &copy; {{ .Site.Copyright | safeHTML }}</div>
+  <div class="copyright">
+    Copyright &copy; 2017 Isaac Khor. License
+    <a href="{{ .Site.Params.licenseFile }}">here</a>.
+  </div>
 </footer>
 </div>
 </body>
