--- a/static/res/custom.css
+++ b/static/res/custom.css
@@ -106,7 +106,16 @@ hr {
   margin-top: 1.5rem;
 }
 
+figure {
+  margin: 1em;
+  text-align: center;
+}
+figcaption > h4 { margin: 0; }
 img {
-  height: 40%;
-  width: 40%;
+  max-width: 500px;
+  align: middle;
+  border: 1px dashed rgba(48, 48, 0, 0.15);
+}
+figcaption {
+  font-size: 0.9em;
 }
