--- a/static/res/custom.css
+++ b/static/res/custom.css
@@ -1,7 +1,7 @@
 body {
   color: #555;
   font-size: 16px;
-  font-family: Open Sans, Helvetica, Arial, sans-serif;
+  font-family: Open Sans, Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;
   line-height: 1.6em;
 }
 
