--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,8 @@
 <footer id="footer">
-  <div class="hr"></div>
-  <nav class="footer-links">
-  </nav>
+  <hr>
+  <nav class="footer-links"></nav>
   <div class="copyright">
-    Copyright &copy; 2017 Isaac Khor. License
-    <a href="{{ .Site.Params.licenseFile }}">here</a>.
+    Copyright &copy; Isaac Khor. All content licensed under CC-BY-NC 4.0.
   </div>
 </footer>
 </body>
