--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,9 +6,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>{{ $isHomePage := eq .Title .Site.Title }}{{ .Title }}</title>
   <link rel='canonical' href='{{ .Permalink }}'>
-  {{ if .RSSLink }}
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  {{ end }}
+  <link href="{{ .Site.Params.rssurl }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   <link rel='icon' href='{{ ( or .Site.Params.assets.favicon "favicon.ico" ) | relURL }}'>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
@@ -20,8 +18,9 @@
   <header class="header">
     <h1 class="header__title">
       <a class="header__link" href="/">
-      {{ .Site.Title }}</a></h1>
-    <div class="header__tagline">{{ .Site.Params.tagline }}</div>
+        {{ .Site.Title }}
+      </a>
+    </h1>
   </header>
   <nav class="navbar">
     <ul class="navbar__menu">
