Move normalize.css to source origin

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,7 @@
   <link href="{{ .Site.Params.rssurl }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   <link rel='icon' href='{{ ( or .Site.Params.assets.favicon "favicon.ico" ) | relURL }}'>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="/res/normalize.css">
   <link rel="stylesheet" type="text/css" href="/res/custom.css">
 </head>
 
