--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,26 +1,1 @@
-{{ partial "head.html" . }}
-
-<main id="main" class="main">
-  <article class="article">
-    <div class="article__content">
-    	{{ .Content }}
-    </div>
-    <ul class="article-list">
-    <!--
-    {{ range (.Paginator 6).Pages }}
-      <li class="article-list__item">
-        <time itemprop="datePublished" datetime="{{ .Date.Format "2006-01-02" }}">
-          {{ .Date.Format "02 Jan 2006" }}
-        </time>
-        <span class="seperator">·</span>
-        <span class="anticle-list__title">
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
-        </span>
-      </li>
-    {{ end }}
-    -->
-    </ul>
-  </article>
-</main>
-
-{{ partial "footer.html" . }}
+Under construction. Contact me at contact@thisdomain or @isaackhor on instagram. 
